--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </tr>
         <tr class="c-row">
             <td>BootStrap Assignment</td>
-            <td><a href="Assignment-BootStrap/" target="_blank">Click Here</a></td>
+            <td><a href="Assignment-Bootstrap/index.html" target="_blank">Click Here</a></td>
         </tr>
         <tr>
             <td>JavaScript Assignment</td>
