completed JS tasks

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </tr>
         <tr>
             <td>JavaScript Assignment</td>
-            <td><a href="Assignment-JavaScript/" target="_blank">Click Here</a></td>
+            <td><a href="Assignment-JS/index.html" target="_blank">Click Here</a></td>
         </tr>
         
     </table>
