--- a/Assignment-JS/src/task11.html
+++ b/Assignment-JS/src/task11.html
@@ -6,7 +6,7 @@
   <style>
     body {
       background: linear-gradient(rgb(199, 243, 249), rgb(108, 199, 161));
-      height: 100vh;
+      height: screen;
     }
 
     .error-message {
