--- a/Assignment-HTML/index.html
+++ b/Assignment-HTML/index.html
@@ -59,6 +59,6 @@
             <td><a href="src/Task-10/index.html" target="_blank">Click Here</a></td>
         </tr>
     </table>
-  
+    <div style="display: flex; justify-content: center">       <a class="custom_back" href="../index.html">Back to Home</a> 
 </body>
 </html>
