--- a/Assignment-JS/index.html
+++ b/Assignment-JS/index.html
@@ -63,6 +63,6 @@
             <td><a href="src/task11.html" target="_blank">Click Here</a></td>
         </tr>
     </table>
-  
+    <div style="display: flex; justify-content: center">       <a class="custom_back" href="../index.html">Back to Home</a> 
 </body>
 </html
