--- a/Assignment-CSS/index.html
+++ b/Assignment-CSS/index.html
@@ -68,6 +68,6 @@
         </tr>
     </table>
     <hr>
-    
+    <div style="display: flex; justify-content: center">       <a class="custom_back" href="../index.html">Back to Home</a> 
 </body>
 </html>
