--- a/Assignments-Bootstrap/index.html
+++ b/Assignments-Bootstrap/index.html
@@ -52,6 +52,6 @@
         </tr>
     
     </table>
-  
+    <div style="display: flex; justify-content: center">       <a class="custom_back" href="../index.html">Back to Home</a> 
 </body>
 </html>
